fix model import path

--- a/src/templates/model.mustache
+++ b/src/templates/model.mustache
@@ -1,5 +1,5 @@
 {{#imports}}
-import { {{.}} } from 'models';
+import { {{name}} } from './{{filePath}}';
 {{/imports}}
 
 export class {{ modelName }} {
